--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,6 +2,16 @@ body {
     padding-bottom: 20px;
 }
 
+.container{
+    width: 90%;
+}
+
+hr{
+    border: none;
+    height: 1px;
+    color: #333;
+    background-color: #333
+}
 .navbar {
     margin-bottom: 20px;
 }
