--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,56 +49,92 @@
         </form>
     </div>
 </nav>
-<div class="container box">
+<div class="container">
     <div class="row">
+
         <!--carousel starts-->
         <div class="col-md-8">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="http://lorempixel.com/output/sports-q-c-1600-500-1.jpg" alt="First slide"/>
-                        <div class="carousel-caption">
-                            <h4>First Carousel</h4>
-                            <p>Firsl sport image </p>
+            <div class="card">
+                <div class="card-header">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="http://lorempixel.com/output/sports-q-c-1600-500-1.jpg"
+                                     alt="First slide"/>
+                                <div class="carousel-caption">
+                                    <h4>First Carousel</h4>
+                                    <p>Firsl sport image </p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="http://lorempixel.com/output/sports-q-c-1600-500-2.jpg"
+                                     alt="Second slide"/>
+                                <div class="carousel-caption">
+                                    <h4>Second Carousel</h4>
+                                    <p>Second sport image </p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="http://lorempixel.com/output/sports-q-c-1600-500-3.jpg"
+                                     alt="Third slide"/>
+                                <div class="carousel-caption">
+                                    <h4>Third Carousel</h4>
+                                    <p>Third sport image </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="http://lorempixel.com/output/sports-q-c-1600-500-2.jpg" alt="Second slide"/>
-                        <div class="carousel-caption">
-                            <h4>Second Carousel</h4>
-                            <p>Second sport image </p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="http://lorempixel.com/output/sports-q-c-1600-500-3.jpg" alt="Third slide"/>
-                        <div class="carousel-caption">
-                            <h4>Third Carousel</h4>
-                            <p>Third sport image </p>
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+
             </div>
             <!--carousel ends-->
         </div>
         <div class="col-md-4">
-
+            <img src="/image/logo.jpg" class="img-fluid" alt="logo"/>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <img src="/image/best.png" class="img-thumbnail" height="150px" alt="image1"/>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <img src="/image/faq.png" class="img-thumbnail" height="150px" alt="image2"/>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <img src="/image/hours.png" class="img-thumbnail" height="150px" alt="image3"/>
+                </div>
+            </div>
         </div>
     </div>
 
 </div>
+
 
 
 <!-- Bootstrap core JavaScript
