Featured books section added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,10 +105,10 @@
             <!--carousel ends-->
         </div>
         <div class="col-md-4">
-            <img src="/image/logo.jpg" class="img-fluid" alt="logo"/>
+            <img src="/image/logo.jpg" class="img-fluid img-thumbnail" alt="logo"/>
         </div>
     </div>
-    <hr />
+    <hr/>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
@@ -133,8 +133,76 @@
         </div>
     </div>
 
-</div>
+    <div>
+        <div class="home-headline">
+            <span>
+            feature books
+            </span>
+            <hr style="margin-top: -15px"/>
+        </div>
+    </div>
 
+    <div class="row align-content-md-center">
+        <div class="col-md-12 m-2">
+            <div class="card">
+                <div class="card-header">
+                    <div id="featured-books" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#featured-books" data-slide-to="0" class="active"></li>
+                            <li data-target="#featured-books" data-slide-to="1"></li>
+                            <li data-target="#featured-books" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image1" /></div>
+                                    <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image2" /></div>
+                                    <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image3" /></div>
+                                    <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image4" /></div>
+                                    <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image5" /></div>
+                                    <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image6" /></div>
+                                </div>
+                            </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image1" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image2" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image3" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image4" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image5" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image6" /></div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image1" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image2" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image3" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image4" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image5" /></div>
+                                <div class="col-md-2"><img src="image/book1.png" class="img-fluid img-thumbnail" alt="image6" /></div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#featured-books" role="button"
+                       data-slide="prev">
+                        <span class="carousel-control-prev-icon bg-primary" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#featured-books" role="button"
+                       data-slide="next">
+                        <span class="carousel-control-next-icon bg-primary" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+        <!--carousel ends-->
+    </div>
+
+</div><!--end of container-->
 
 
 <!-- Bootstrap core JavaScript
