--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,3 +19,14 @@ hr{
     border: 1px solid red;
 
 }
+.home-headline{
+    font-size: 24px;
+    color: #fff;
+    margin: auto;
+    text-align: center;
+    margin-top: -13px;
+}
+.home-headline span{
+    background-color: #231f20;
+    padding: 5px 22px;
+}
